--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Selectize wrapper for VueJS.",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "webpack -w"
+    "build": "webpack -p",
+    "dev": "webpack -w",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,9 @@
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.8",
+    "css-loader": "^0.26.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.1",
     "vue-loader": "^11.1.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1"
